--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -5,7 +5,7 @@
     <title>Anime Hunt</title>
     <script src="https://kit.fontawesome.com/e564c938c5.js" crossorigin="anonymous"></script>
     <meta property="og:title" content="Anime Hunt" />
-    <meta property="og:image" content="https://camo.githubusercontent.com/7d703179a41a224c4a25c24da1332882f1d9585dc1f5ac92c0895150eb760771/68747470733a2f2f692e6779617a6f2e636f6d2f31376636336433653539613566366536613235303363306462613965333037632e706e67" />
+    <meta property="og:image" content="https://i.ibb.co/6Yvcg4g/60521088ecef71533d8e27d998ceeea8.png" />
     <meta
       property="og:description"
       content="Anime Hunt is clone of Product Hunt that allows users to discover anime, create posts that review anime, and talk to others about anime."
