--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8" />
     <title>Anime Hunt</title>
     <script src="https://kit.fontawesome.com/e564c938c5.js" crossorigin="anonymous"></script>
-    
+    <meta property="og:title" content="Anime Hunt" />
+    <meta property="og:image" content="https://i.ibb.co/6Yvcg4g/60521088ecef71533d8e27d998ceeea8.png" />
+    <meta
+      property="og:description"
+      content="Anime Hunt is clone of Product Hunt that allows users to discover anime, create posts that review anime, and talk to others about anime."
+    />
+    <meta
+      property="og:url"
+      content="https://programmer.github.io/project_name"
+    />
   </head>
   <body>
     <div id="root"></div>
