--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,12 +4,17 @@
     <meta charset="utf-8" />
     <title>Anime Hunt</title>
     <script src="https://kit.fontawesome.com/e564c938c5.js" crossorigin="anonymous"></script>
-    <meta name="description" content="musichub" />
-    <meta name="title" property="og:title" content="musichub" />
-    <meta property="og:type" content="website" />
-    <meta name="image" property="og:image" content="https://i.imgur.com/TYXIr5m.png" />
-    <meta name="description" property="og:description" content="a full stack application to explore and listen to music" />
-    <meta name="author" content="musichub-team" />
+    <meta name='title' property="og:title" content="Anime Hunt" />
+    <meta name='image'property="og:image" content="https://i.ibb.co/6Yvcg4g/60521088ecef71533d8e27d998ceeea8.png" />
+    <meta
+    name='description'
+      property="og:description"
+      content="Anime Hunt is clone of Product Hunt that allows users to discover anime, create posts that review anime, and talk to others about anime."
+    />
+    <meta
+      property="og:url"
+      content="https://programmer.github.io/project_name"
+    />
   </head>
   <body>
     <div id="root"></div>
