--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:url"
-      content="https://programmer.github.io/project_name"
+      content="https://programmer.github.io/AnimeHunt"
     />
   </head>
   <body>
